--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <footer class="footer">
       <div class="container footer-position">
         <div class="footer-content-wrapper">
-          <a class="link logo" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
+          <a class="link logo logo-footer" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
           <p class="footer-desc">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
