--- a/index.html
+++ b/index.html
@@ -114,28 +114,37 @@
           <h2 class="section-title">What are we doing</h2>
           <ul class="list business-section-list">
             <li class="item">
-              <img
-                src="./images/studio/desktop.jpg"
-                alt="desktop"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source srcset="./images/studio/desktop.jpg 1x, ./images/studio/desktop@2x.jpg 2x" />
+                <img
+                  src="./images/studio/desktop.jpg"
+                  alt="desktop"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="item">
-              <img
-                src="./images/studio/phone.jpg"
-                alt="phone"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source srcset="./images/studio/phone.jpg 1x, ./images/studio/phone@2x.jpg 2x" />
+                <img
+                  src="./images/studio/phone.jpg"
+                  alt="phone"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
             <li class="item">
-              <img
-                src="./images/studio/gadgets.jpg"
-                alt="gadgets"
-                width="360"
-                height="300"
-              />
+              <picture>
+                <source srcset="./images/studio/gadgets.jpg 1x, ./images/studio/gadgets@2x.jpg 2x" />
+                <img
+                  src="./images/studio/gadgets.jpg"
+                  alt="gadgets"
+                  width="360"
+                  height="300"
+                />
+              </picture>
             </li>
           </ul>
         </div>
@@ -145,12 +154,15 @@
           <h2 class="section-title ">Our Team</h2>
           <ul class="list team-list">
             <li class="member-card">
-              <img
-                src="./images/studio/1-mark.jpg"
-                alt="Man with black beard in blue shirt"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source srcset="./images/studio/1-mark.jpg 1x, ./images/studio/1-mark@2x.jpg 2x" />
+                <img
+                  src="./images/studio/1-mark.jpg"
+                  alt="Man with black beard in blue shirt"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="member-card-content">
                 <h3 class="member">Mark Guerrero</h3>
                 <p class="member-position">Product Designer</p>
@@ -187,12 +199,15 @@
               </div>
             </li>
             <li class="member-card">
-              <img
-                src="./images/studio/2-tom.jpg"
-                alt="Man with red beard in blue shirt"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source srcset="./images/studio/2-tom.jpg 1x, ./images/studio/2-tom@2x.jpg 2x" />
+                <img
+                  src="./images/studio/2-tom.jpg"
+                  alt="Man with red beard in blue shirt"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="member-card-content">
                 <h3 class="member">Tom Ford</h3>
                 <p class="member-position">Frontend Developer</p>
@@ -229,12 +244,15 @@
               </div>
             </li>
             <li class="member-card">
-              <img
-                src="./images/studio/3-camila.jpg"
-                alt="Woman in a pink sweater"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source srcset="./images/studio/3-camila.jpg 1x, ./images/studio/3-camila@2x.jpg 2x" />
+                <img
+                  src="./images/studio/3-camila.jpg"
+                  alt="Woman in a pink sweater"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="member-card-content">
                 <h3 class="member">Camila Garcia</h3>
                 <p class="member-position">Marketing</p>
@@ -271,12 +289,15 @@
               </div>
             </li>
             <li class="member-card">
-              <img
-                src="./images/studio/4-daniel.jpg"
-                alt="Man with black beard in gray t-shirt"
-                width="264"
-                height="260"
-              />
+              <picture>
+                <source srcset="./images/studio/4-daniel.jpg 1x, ./images/studio/4-daniel@2x.jpg 2x" />
+                <img
+                  src="./images/studio/4-daniel.jpg"
+                  alt="Man with black beard in gray t-shirt"
+                  width="264"
+                  height="260"
+                />
+              </picture>
               <div class="member-card-content">
                 <h3 class="member">Daniel Wilson</h3>
                 <p class="member-position">UI Designer</p>
