--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
       </button>
     
       <ul class="mobile-menu list">
-        <li><a href="" class="link mobile-nav-link active">Studio</a></li>
-        <li><a href="" class="link mobile-nav-link">Portfolio</a></li>
+        <li><a href="./index.html" class="link mobile-nav-link active">Studio</a></li>
+        <li><a href="./portfolio.html" class="link mobile-nav-link">Portfolio</a></li>
         <li><a href="" class="link mobile-nav-link">Contacts</a></li>
       </ul>
 
